--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -29,6 +29,6 @@ jobs:
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
         with:
-          project: <put your Deno Deploy project name here>
+          project: rajrupdas-webstackpro-34
           entrypoint: "main.ts"
           root: "."
